motorchi/css/style.css
@charset "UTF-8";
/* CSS Document */

 body
{
	font-size:80%;
	background-color: #efefef;
	color: #D4D4D4;

}
#page{
	max-width:940px;
	min-width:720px;
	margin:10px auto 10px atuo;
	padding:20px;
	border:4px double #000;
	background-color: #FFFFFF;}
	
.nav {
	text-align: center;
	font-family: Facit;
	color: #620F10;
}
.navbar, .navbar-collapse{
	color: #620F10;
}
.nav ul  {
	list-style-type: none;
	background-color: #7D7D7D;
	margin: 0;
	padding: 20px;
	overflow: hidden;
	}

.nav li {
	display: inline;
	margin: 3px;
	font-family: Facit;
	font-size:18px;
		
	}
.text p{

	width: auto;
	margin: 50px;
	font-family: gineso, sans-serif;
	font-style: normal;
	font-weight: 100;
	font-size: 2em;
	color:#0E8191;}
	
.nav a, .footer a {  
 		color:#0A067E;
		text-decoration:none;
		font-family:"Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
		font-size:20px; 
		}
		

.image {
	margin-left: 40px;
}

.image h1, .photo h1{
	color: #005A4E;
	border-bottom: 2px solid
}
					
.photo img{
	width:40%;
}
.photo{
	list-style: none;
	margin: 0px auto;
	padding: 10px;
	max-width: 900px;
	text-align: center
}
	
.footer li{
	display: inline;
	margin: 10px;
	color: #0A067E;
}

.footer h1{
	font-size: 10px;
}
.footer{
	font-family: gineso, sans-serif;
	font-style: normal;
	font-weight: 100;
	font-size: 1em;
	padding: 20px;
	background-color: #7D7D7D;
	overflow: hidden;
	
}
.footer ul a{
	font-family: gineso, sans-serif;
	font-style: normal;
	font-weight: 100;
	font-size: 1em;
	text-decoration: none;
	list-style: none;
}

